# makefile-example

./: CMakeLists.app
hello/: CMakeLists.txt  Hello.cpp  Hello.h  main.cpp
